--- a/package.json
+++ b/package.json
@@ -124,5 +124,8 @@
     "webpack-dev-middleware": "^3.7.1",
     "webpack-dev-server": "^3.8.0",
     "webpack-hot-middleware": "^2.25.0"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.4"
   }
 }
